--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 <html>
   <head></head>
   <body>
-    <h1>portfolio</h1>
+    <!-- The sidebar -->
+    <div class="sidebar">
+      <a class="active" href="#home">Home</a>
+      <a href="#work>Work</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
+
+    <!-- Page content -->
+    <div class="content">
+      <h1>portfolio stuff</h1>
+      <p>add some images</p>
+    </div>
   </body>
 </html>
