add some styling

--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <!--For my portfolio site.-->
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="./styling/styles.css">
+  </head>
   <body>
     <!-- The sidebar -->
     <div class="sidebar">
       <a class="active" href="#home">Home</a>
-      <a href="#work>Work</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
       <a href="#about">About</a>
+      <a href="#work">Work</a>
+      <a href="#news">Resume</a>
+      <a href="#contact">Contact</a>
     </div>
 
     <!-- Page content -->
