--- a/pages/1work/games.html
+++ b/pages/1work/games.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <link rel="stylesheet" href="./styling/styles.css">
+        <link rel="stylesheet" href="../../styling/styles.css">
     </head>
 
     <body>
@@ -10,19 +10,19 @@
         <!-- The sidebar -->
         <div class="sidebar">
             <div class="logo-responsive">
-                <img src="./assets/dogLOGO.png" alt="dog logo" width="200px">
+                <img src="../../assets/dogLOGO.png" alt="dog logo" width="200px">
             </div>
         
-            <h1 style="padding: 16px;">Vi-Linh Nguyen</h1>
+            <h1 style="padding: 5px 16px;">Vi-Linh Nguyen</h1>
             <div id="resourcesTabs">
-                <a class="active" href="./index.html">Work</a>
-                <a href="./pages/2about/about.html">About</a>
-                <a href="./pages/4contact/contact.html">Contact</a>
+                <a class="active" href="../../index.html">Work</a>
+                <a href="../2about/about.html">About</a>
+                <a href="../4contact/contact.html">Contact</a>
             </div>
             <div id="projectTabs">
-                <a href="./pages/1work/code.html">Code</a>
-                <a href="./pages/1work/games.html">Games</a>
-                <a href="./pages/1work/art.html">Art</a>
+                <a href="../1work/code.html">Code</a>
+                <a href="../1work/games.html">Games</a>
+                <a href="../1work/art.html">Art</a>
             </div>
         </div>
         
