add some more resume stuff and fix modal issue

--- a/index.html
+++ b/index.html
@@ -16,17 +16,8 @@
         <img src="./assets/dogLOGO.png" alt="dog logo" width="200px">
       </div>
 
-      <div id="myBtn">
-        <h1 style="padding: 5px 16px;">Vi-Linh Nguyen</h1>
-      </div>
-      <!--modal for name pronounciation-->
-      <div id="myModal" class="modal">
-        <!--modal content-->
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <p>Pronounced: VEE LIN WIN</p>
-        </div>
-      </div>
+      
+      <h1 id="myBtn" style="padding: 5px 16px;">Vi-Linh Nguyen</h1>
 
       <div id="resourcesTabs">
         <a class="active" href="./index.html">Work</a>
@@ -37,6 +28,22 @@
         <a href="./pages/1work/code.html">Code</a>
         <a href="./pages/1work/games.html">Games</a>
         <a href="./pages/1work/art.html">Art</a>
+      </div>
+
+      <div id="socials">
+        <a href="#insta"></a>
+        <a href="#twitter"></a>
+        <a href="#linkedin"></a>
+      </div>
+
+    </div>
+
+    <!--modal for name pronounciation-->
+    <div id="myModal" class="modal">
+      <!--modal content-->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Pronounced: VEE LIN WIN</p>
       </div>
     </div>
 
