Add some socials and a contact form

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./styling/styles.css">
     <link rel="stylesheet" href="./styling/overlay.css">
     <link rel="stylesheet" href="./styling/modal.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,9 +32,10 @@
       </div>
 
       <div id="socials">
-        <a href="#insta"></a>
-        <a href="#twitter"></a>
-        <a href="#linkedin"></a>
+        <h2>Follow me!</h2>
+        <a href="https://www.instagram.com/linh_is_tibia/"><i class="fa fa-instagram" id="insta"></i></a>
+        <a href="https://twitter.com/vilinh27"><i class="fa fa-twitter" id="twitter"></i></a>
+        <a href="https://www.linkedin.com/in/vilinhnguyen27/"><i class="fa fa-linkedin" id="linkedin"></i></a>
       </div>
 
     </div>
