--- a/pages/1work/code.html
+++ b/pages/1work/code.html
@@ -4,6 +4,7 @@
     <head>
         <link rel="stylesheet" href="../../styling/styles.css">
         <link rel="stylesheet" href="../../styling/modal.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -26,6 +27,13 @@
                 <a href="../1work/code.html">Code</a>
                 <a href="../1work/games.html">Games</a>
                 <a href="../1work/art.html">Art</a>
+            </div>
+
+            <div id="socials">
+                <h2>Follow me!</h2>
+                <a href="https://www.instagram.com/linh_is_tibia/"><i class="fa fa-instagram" id="insta"></i></a>
+                <a href="https://twitter.com/vilinh27"><i class="fa fa-twitter" id="twitter"></i></a>
+                <a href="https://www.linkedin.com/in/vilinhnguyen27/"><i class="fa fa-linkedin" id="linkedin"></i></a>
             </div>
         </div>
 
