--- a/pages/2about/about.html
+++ b/pages/2about/about.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../../styling/styles.css">
     <link rel="stylesheet" href="../../styling/modal.css">
     <link rel="stylesheet" href="../../styling/resume.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -27,6 +28,13 @@
             <a href="../1work/code.html">Code</a>
             <a href="../1work/games.html">Games</a>
             <a href="../1work/art.html">Art</a>
+        </div>
+
+        <div id="socials">
+            <h2>Follow me!</h2>
+            <a href="https://www.instagram.com/linh_is_tibia/"><i class="fa fa-instagram" id="insta"></i></a>
+            <a href="https://twitter.com/vilinh27"><i class="fa fa-twitter" id="twitter"></i></a>
+            <a href="https://www.linkedin.com/in/vilinhnguyen27/"><i class="fa fa-linkedin" id="linkedin"></i></a>
         </div>
     </div>
 
@@ -140,7 +148,6 @@
                 <div class="skills">
                     <h2>Skills</h2>
                     <div id="languages">
-                        <h3>Languages</h3>
                         <ul>
                             <li>
                                 French
@@ -152,7 +159,6 @@
                     </div>
 
                     <div id="programming">
-                        <h3>Programming</h3>
                         <ul>
                             <li>
                                 java
@@ -172,7 +178,6 @@
                     </div>
                     
                     <div id="webdev">
-                        <h3>Web Development</h3>
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
@@ -181,7 +186,6 @@
                     </div>
 
                     <div id="art-skills">
-                        <h3>Art</h3>
                         <ul>
                             <li>adobe illustrator</li>
                             <li>adobe photoshop</li>
@@ -191,7 +195,6 @@
                     </div>
 
                     <div id="office-skills">
-                        <h3>Logistical</h3>
                         <ul>
                             <li>
                                 microsoft word
@@ -204,9 +207,14 @@
                     
                 </div>
 
+                <!--projects-->
+                <div class="myProjects">
+                    <h2>Projects</h2>
+                </div>
+
                 <!--education-->
                 <div class="education">
-
+                    <h2>Education</h2>
                 </div>
 
             </div>
