Add some art and slideshow stuff

--- a/pages/1work/code.html
+++ b/pages/1work/code.html
@@ -19,12 +19,12 @@
             <h1 id="myBtn" style="padding: 5px 16px;">Vi-Linh Nguyen</h1>
             
             <div id="resourcesTabs">
-                <a class="active" href="../../index.html">Work</a>
+                <a href="../../index.html">Work</a>
                 <a href="../2about/about.html">About</a>
                 <a href="../4contact/contact.html">Contact</a>
             </div>
             <div id="projectTabs">
-                <a href="../1work/code.html">Code</a>
+                <a class="active" href="../1work/code.html">Code</a>
                 <a href="../1work/games.html">Games</a>
                 <a href="../1work/art.html">Art</a>
             </div>
