--- a/pages/2about/about.html
+++ b/pages/2about/about.html
@@ -20,8 +20,8 @@
         <h1 id="myBtn" style="padding: 5px 16px;">Vi-Linh Nguyen</h1>
         
         <div id="resourcesTabs">
-            <a class="active" href="../../index.html">Work</a>
-            <a href="./about.html">About</a>
+            <a href="../../index.html">Work</a>
+            <a class="active" href="./about.html">About</a>
             <a href="../4contact/contact.html">Contact</a>
         </div>
         <div id="projectTabs">
