--- a/pages/4contact/contact.html
+++ b/pages/4contact/contact.html
@@ -19,9 +19,9 @@
         <h1 id="myBtn" style="padding: 5px 16px;">Vi-Linh Nguyen</h1>
         
         <div id="resourcesTabs">
-            <a class="active" href="../../index.html">Work</a>
+            <a href="../../index.html">Work</a>
             <a href="../2about/about.html">About</a>
-            <a href="./contact.html">Contact</a>
+            <a class="active" href="./contact.html">Contact</a>
         </div>
         <div id="projectTabs">
             <a href="../../pages/1work/code.html">Code</a>
