--- a/pages/1work/art.html
+++ b/pages/1work/art.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="../../styling/styles.css">
         <link rel="stylesheet" href="../../styling/modal.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../../styling/slideshow.css">
     </head>
 
     <body>
@@ -18,14 +19,14 @@
             <h1 id="myBtn" style="padding: 5px 16px;">Vi-Linh Nguyen</h1>
 
             <div id="resourcesTabs">
-                <a class="active" href="../../index.html">Work</a>
+                <a href="../../index.html">Work</a>
                 <a href="../2about/about.html">About</a>
                 <a href="../4contact/contact.html">Contact</a>
             </div>
             <div id="projectTabs">
                 <a href="../1work/code.html">Code</a>
                 <a href="../1work/games.html">Games</a>
-                <a href="../1work/art.html">Art</a>
+                <a class="active" href="../1work/art.html">Art</a>
             </div>
 
             <div id="socials">
@@ -47,8 +48,100 @@
 
         <!-- Page content -->
         <div class="content">
+            <div class="flex-container">
+                <h2>Film collaboration project</h2>
+                <div class="flex-child art1">
+                    <img src="../../assets/art/ella-collab/foottown.jpg" 
+                    alt="food town"
+                    width="720px">
+                </div>
+                <div class="flex-child art2">
+                    <img src="../../assets/art/ella-collab/kitchen.jpg" alt="kitchen"
+                    width="720px">
+                </div>
+                <div class="flex-child art2">
+                    <img src="../../assets/art/ella-collab/chili-board.jpg" alt="chili-board" width="720px">
+                </div>
+                <h2>Character Art</h2>
+                <div class="flex-child art3">
+                    <img src="../../assets/art/marlowe.jpg" alt="Marlowe" width="720px">
+                </div>
+                <div class="flex-child art4">
+                    <img src="../../assets/art/edith.jpg" alt="Edith" width="720px">
+                </div>
+
+                <h2>Fan Art</h2>
+                <div class="flex-child art5">
+                    <!--Heir's Game Theuden slide show-->
+                    <div class="slideshow-container">
+                        <div class="mySlides fade"><!--slide 1-->
+                            <div class="numbertext">1 / 2</div>
+                            <img src="../../assets/art/fanart/theuden2-webtoon.jpg" alt="Theuden Heir's Game" width="720px">
+                        </div>
+
+                        <div class="mySlides fade"><!--slide 2-->
+                            <div class="numbertext">2 / 2</div>
+                            <img src="../../assets/art/fanart/theuden-webtoon.jpg" alt="Theuden Heir's Game 2" width="720px">
+                        </div>
+                        <!--end of Heir's game slide show-->
+
+                        <!-- Next and previous buttons -->
+                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    </div>
+                    <br>
+                    <!-- The dots/circles -->
+                    <div style="text-align:center">
+                        <span class="dot" onclick="currentSlide(1)"></span>
+                        <span class="dot" onclick="currentSlide(2)"></span>
+                    </div>
+                </div>
+
+                <div class="flex-child art6">
+                    <!--animal crossing slide show-->
+                    <div class="slideshow-container2">
+                        <div class="mySlides2 fade"><!--slide 1-->
+                            <div class="numbertext2">1 / 3</div>
+                            <img src="../../assets/art/fanart/aro-webtoon.jpg" alt="Aro ACNH style" width="720px">
+                        </div>
+
+                        <div class="mySlides2 fade"><!--slide 2-->
+                            <div class="numbertext2">2 / 3</div>
+                            <img src="../../assets/art/fanart/theuden3-webtoon.jpg" alt="Theuden ACNH style" width="720px">
+                        </div>
+
+                        <div class="mySlides2 fade"><!--slide 3-->
+                            <div class="numbertext2">3 / 3</div>
+                            <img src="../../assets/art/fanart/isran-webtoon.jpg" alt="Isran ACNH style" width="720px">
+                        </div>
+                        <!--end of animal crossing slide show-->
+
+                        <!-- Next and previous buttons -->
+                        <a class="prev2" onclick="plusSlides2(-1)">&#10094;</a>
+                        <a class="next2" onclick="plusSlides2(1)">&#10095;</a>
+                    </div>
+                    <br>
+                    <!-- The dots/circles -->
+                    <div style="text-align:center">
+                        <span class="dot2" onclick="currentSlide2(1)"></span>
+                        <span class="dot2" onclick="currentSlide2(2)"></span>
+                        <span class="dot2" onclick="currentSlide2(3)"></span>
+                    </div>
+                </div>
+
+                <div class="flex-child art7">
+                    <img src="" alt="" width="720px">
+                </div>
+                <div class="flex-child art8">
+                    <img src="" alt="" width="720px">
+                </div>
+                <div class="flex-child art9">
+                    <img src="" alt="" width="720px">
+                </div>
+            </div>
         </div>
         
         <script src="../../styling/js-effects/modal.js"></script>
+        <script src="../../styling/js-effects/slideshow.js"></script>
     </body>
 </html>
