Add some more slideshows to art page and add some content to game page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- The sidebar -->
     <div class="sidebar">
       <div class="logo-responsive">
-        <img src="./assets/dogLOGO.png" alt="dog logo" width="100px">
+        <img src="./assets/dogLOGO.png" 
+        alt="dog logo" width="100px">
       </div>
 
       
@@ -56,7 +57,8 @@
         <li>
           <a href="./pages/1work/code.html">
             <div class="container">
-              <img src="./assets/projectThumbnails/code-processed.png" alt="code thumbnail" width="960px" height="240px"
+              <img 
+              src="./assets/projectThumbnails/code-processed.png" alt="code thumbnail" width="960px" height="240px"
                 class="image">
               <div class="overlay">
                 <div class="text">Code</div>
