--- a/pages/1work/games.html
+++ b/pages/1work/games.html
@@ -12,7 +12,7 @@
         <!-- The sidebar -->
         <div class="sidebar">
             <div class="logo-responsive">
-                <img src="../../assets/dogLOGO.png" alt="dog logo" width="200px">
+                <img src="../../assets/dogLOGO.png" alt="dog logo" width="100px">
             </div>
         
             <h1 id="myBtn" style="padding: 5px 16px;">Vi-Linh Nguyen</h1>
@@ -47,6 +47,27 @@
         
         <!-- Page content -->
         <div class="content">
+            <div class="time-to-talk">
+                <img class="img-responsive" src="../../assets/games/timeToTalk-itchioCoverArtboard-1.png" alt="time to talk" width="720px">
+                <h2>Time to Talk</h2>
+                <p>About the game...</p>
+                <p>Click <a href="https://linh-is-tibia.itch.io/time-to-talk">here</a> to play the game.</p>
+            </div>
+
+            <br>
+            <div class="hellghost">
+                <img class="img-responsive" src="../../assets/games/ghost01.JPG" alt="hell ghost" width="720px">
+                <h2>Hell Ghost</h2>
+                <p>About the game...</p>
+                <p>Click <a href="https://linh-is-tibia.itch.io/hellghost">here</a> to play the game</p>
+            </div>
+
+            <div class="cartrige">
+                <img class="img-responsive" src="../../assets/games/screenshot3.JPG" alt="cartrige collector" width="720px">
+                <h2>Cartridge collector</h2>
+                <p>About the game</p>
+                <p>Click <a href="https://linh-is-tibia.itch.io/cartridge-collector">here</a> to play the game</p>
+            </div>
         </div>
 
         <script src="../../styling/js-effects/modal.js"></script>
