--- a/pages/2about/about.html
+++ b/pages/2about/about.html
@@ -14,7 +14,7 @@
     <!-- The sidebar -->
     <div class="sidebar">
         <div class="logo-responsive">
-            <img src="../../assets/dogLOGO.png" alt="dog logo" width="200px">
+            <img src="../../assets/dogLOGO.png" alt="dog logo" width="100px">
         </div>
     
         <h1 id="myBtn" style="padding: 5px 16px;">Vi-Linh Nguyen</h1>
@@ -51,7 +51,7 @@
     <div class="content">
         <div class="flex-container">
             <div class="flex-child image">
-                <img src="../../assets/mepic.jpg" 
+                <img class="img-responsive" src="../../assets/mepic.jpg" 
                 alt="Vi-Linh Nguyen"
                 width="30%"
                 height="30%">
