Fixing the slideshow and adding a code embed in code page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <a href="https://www.instagram.com/linh_is_tibia/"><i class="fa fa-instagram" id="insta"></i></a>
         <a href="https://twitter.com/vilinh27"><i class="fa fa-twitter" id="twitter"></i></a>
         <a href="https://www.linkedin.com/in/vilinhnguyen27/"><i class="fa fa-linkedin" id="linkedin"></i></a>
+        <a href="#git"><i class="fa fa-github" id="github"></i></a>
       </div>
 
     </div>
