--- a/pages/1work/art.html
+++ b/pages/1work/art.html
@@ -35,6 +35,7 @@
                 <a href="https://www.instagram.com/linh_is_tibia/"><i class="fa fa-instagram" id="insta"></i></a>
                 <a href="https://twitter.com/vilinh27"><i class="fa fa-twitter" id="twitter"></i></a>
                 <a href="https://www.linkedin.com/in/vilinhnguyen27/"><i class="fa fa-linkedin" id="linkedin"></i></a>
+                <a href="#git"><i class="fa fa-github" id="github"></i></a>
             </div>
         </div>
 
@@ -68,15 +69,12 @@
                     <img class="img-responsive" src="../../assets/art/marlowe.jpg" alt="Marlowe" width="720px">
                 </div>
                 <div class="flex-child art4">
-                    <img src="../../assets/art/edith.jpg" alt="Edith" width="720px">
+                    <img class="img-responsive" src="../../assets/art/edith.jpg" alt="Edith" width="720px">
                 </div>
 
                 <h2>Fan Art</h2>
                 <div class="flex-child art5">
                     <!--Heir's Game Theuden slide show-->
-                    <!-- <img src="../../assets/art/fanart/theuden2-webtoon.jpg" alt="Theuden Heir's Game" width="720px"> -->
-                    <!-- <img src="../../assets/art/fanart/theuden-webtoon.jpg" alt="Theuden Heir's Game 2" width="720px"> -->
-                    
                     <div class="slideshow-container">
                         <div class="mySlides1 fade">
                             <img class="img-responsive" src="../../assets/art/fanart/theuden2-webtoon.jpg" alt="Theuden Heir's Game" width="720px">
@@ -95,10 +93,6 @@
 
                 <div class="flex-child art6">
                     <!--animal crossing slide show-->
-                    <!-- <img src="../../assets/art/fanart/aro-webtoon.jpg" alt="Aro ACNH style" width="720px"> -->
-                    <!-- <img src="../../assets/art/fanart/theuden3-webtoon.jpg" alt="Theuden ACNH style" width="720px"> -->
-                    <!-- <img src="../../assets/art/fanart/isran-webtoon.jpg" alt="Isran ACNH style" width="720px"> -->
-                    
                     <div class="slideshow-container">
                         <div class="mySlides2 fade">
                             <img class="img-responsive" src="../../assets/art/fanart/aro-webtoon.jpg" alt="Aro ACNH style" width="720px">
