--- a/pages/1work/code.html
+++ b/pages/1work/code.html
@@ -34,6 +34,7 @@
                 <a href="https://www.instagram.com/linh_is_tibia/"><i class="fa fa-instagram" id="insta"></i></a>
                 <a href="https://twitter.com/vilinh27"><i class="fa fa-twitter" id="twitter"></i></a>
                 <a href="https://www.linkedin.com/in/vilinhnguyen27/"><i class="fa fa-linkedin" id="linkedin"></i></a>
+                <a href="#git"><i class="fa fa-github" id="github"></i></a>
             </div>
         </div>
 
@@ -48,6 +49,17 @@
         
         <!-- Page content -->
         <div class="content">
+            <div class="sites">
+                <div class="myStoryPlanner">
+                    <iframe src="https://vilinh27.github.io/myStoryPlanner/" name="myStoryPlanner" scrolling="No" height="300px"
+                        width="80%" style="border: none;"></iframe>
+                    <h2>Story planner website</h2>
+                    <p>I wanted something to display the elements of the stories in my head. Plus this was a good way to experiment
+                        with interactive elements in html and css while getting my ideas down on paper (technically). Click 
+                        <a href="https://vilinh27.github.io/myStoryPlanner/">here</a> to visit the site.
+                    </p>
+                </div>
+            </div>
         </div>
 
         <script src="../../styling/js-effects/modal.js"></script>
