--- a/pages/2about/about.html
+++ b/pages/2about/about.html
@@ -35,6 +35,7 @@
             <a href="https://www.instagram.com/linh_is_tibia/"><i class="fa fa-instagram" id="insta"></i></a>
             <a href="https://twitter.com/vilinh27"><i class="fa fa-twitter" id="twitter"></i></a>
             <a href="https://www.linkedin.com/in/vilinhnguyen27/"><i class="fa fa-linkedin" id="linkedin"></i></a>
+            <a href="#git"><i class="fa fa-github" id="github"></i></a>
         </div>
     </div>
 
@@ -69,76 +70,52 @@
                 </p>
 
                 <!--experience-->
+                <h2>Experience</h2>
                 <div class="timeline">
-                    <h2>Experience</h2>
-                    <!--event-->
                     <div class="container left">
-                        <div class="content">
-                            <h3>Front End Developer</h3>
-                            <h4>SuperWorld ()</h4>
-                            <p>
-                            <ul>
-                                <li>
-                                    my duties...
-                                </li>
-                            </ul>
+                        <div class="timelinecontent">
+                            <h2>FrontEnd Developer Intern</h2>
+                            <h3>SuperWorld</h3>
+                            <h4>(Jan 2021- Jun 2021)</h4>
+                            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim
+                                fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
                             </p>
                         </div>
                     </div>
-                    <!--event-->
                     <div class="container right">
-                        <div class="content">
-                            <h3>Henna Artist/Cashier</h3>
-                            <h4>Sitara Om ()</h4>
-                            <p>
-                            <ul>
-                                <li>
-                                    my duties...
-                                </li>
-                            </ul>
+                        <div class="timelinecontent">
+                            <h2>Henna Artist/Cashier</h2>
+                            <h3>Sitara Om</h3>
+                            <h4>(Jul 2019 - Apr 2020)</h4>
+                            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim
+                                fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
                             </p>
                         </div>
                     </div>
-                    <!--event-->
                     <div class="container left">
-                        <div class="content">
-                            <h3>Remote Animation Intern</h3>
-                            <h4>Happy Mercs ()</h4>
-                            <p>
-                            <ul>
-                                <li>
-                                    my duties...
-                                </li>
-                            </ul>
+                        <div class="timelinecontent">
+                            <h2>Volunteer</h2>
+                            <h3>Chicago Children's Museum</h3>
+                            <h4>(Apr 2019- Aug 2019)</h4>
+                            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim
+                                fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
                             </p>
                         </div>
                     </div>
-                    <!--event-->
                     <div class="container right">
-                        <div class="container">
-                            <h3>Buddy Mentor</h3>
-                            <h4>Columbia College Chicago ()</h4>
-                            <p>
-                                <ul>
-                                    <li>
-                                        my duties...
-                                    </li>
-                                </ul>
-                            </p>
+                        <div class="timelinecontent">
+                            <h2>Animation Intern</h2>
+                            <h3>Happy Mercs</h3>
+                            <h4>(Oct 2018- Jan 2019)</h4>
+                            <p>Lore ipsum...</p>
                         </div>
                     </div>
-                    <!--event-->
                     <div class="container left">
-                        <div class="container">
-                            <h3>Sales Associate</h3>
-                            <h4>Saffron Red ()</h4>
-                            <p>
-                                <ul>
-                                    <li>
-                                        my duties...
-                                    </li>
-                                </ul>
-                            </p>
+                        <div class="timelinecontent">
+                            <h2>Buddy Mentor</h2>
+                            <h3>Columbia College Chicago</h3>
+                            <h4>(May 2017- Dec 2018)</h4>
+                            <p>Lore ipsum...</p>
                         </div>
                     </div>
                 </div>
