add self portrait

--- a/pages/1work/art.html
+++ b/pages/1work/art.html
@@ -73,7 +73,11 @@
                 </div>
 
                 <h2>Fan Art</h2>
-                <div class="flex-child art5">
+                <div class="flex-child art-5">
+                    <img class="img-responsive" src="../../assets/art/fanart/luca-selfportrait.jpg" alt="Luca self potrait"  width="720px">
+                </div>
+
+                <div class="flex-child art6">
                     <!--Heir's Game Theuden slide show-->
                     <div class="slideshow-container">
                         <div class="mySlides1 fade">
@@ -91,7 +95,7 @@
 
                 </div>
 
-                <div class="flex-child art6">
+                <div class="flex-child art7">
                     <!--animal crossing slide show-->
                     <div class="slideshow-container">
                         <div class="mySlides2 fade">
@@ -113,15 +117,12 @@
 
                 </div>
 
-                <div class="flex-child art7">
+                <div class="flex-child art8">
                     <img class="img-responsive" src="../../assets/art/fanart/alex-webtoon.jpg" 
                     alt="Alexander The Great-Boyfriend of the Dead" width="720px">
                 </div>
-                <div class="flex-child art8">
-                    <img class="img-responsive" src="../../assets/art/fanart/rand-webtoon.jpg" alt="Rand Hirahara-I Love Yoo" width="720px">
-                </div>
                 <div class="flex-child art9">
-                    <img class="img-responsive" src="" alt="" width="720px">
+                    <img class="img-responsive" src="../../assets/art/fanart/rand-webtoon.jpg" alt="Rand Hirahara-I Love Yoo" width="720px">
                 </div>
             </div>
         </div>
