--- a/pages/1work/art.html
+++ b/pages/1work/art.html
@@ -73,11 +73,14 @@
                 </div>
 
                 <h2>Fan Art</h2>
-                <div class="flex-child art-5">
+                <div class="flex-child art5">
+                    <img class="img-responsive" src="../../assets/art/fanart/toph-desert.jpg" alt="toph in the desert" width="720px">
+                </div>
+                <div class="flex-child art6">
                     <img class="img-responsive" src="../../assets/art/fanart/luca-selfportrait.jpg" alt="Luca self potrait"  width="720px">
                 </div>
 
-                <div class="flex-child art6">
+                <div class="flex-child art7">
                     <!--Heir's Game Theuden slide show-->
                     <div class="slideshow-container">
                         <div class="mySlides1 fade">
@@ -95,7 +98,7 @@
 
                 </div>
 
-                <div class="flex-child art7">
+                <div class="flex-child art8">
                     <!--animal crossing slide show-->
                     <div class="slideshow-container">
                         <div class="mySlides2 fade">
@@ -117,11 +120,11 @@
 
                 </div>
 
-                <div class="flex-child art8">
+                <div class="flex-child art9">
                     <img class="img-responsive" src="../../assets/art/fanart/alex-webtoon.jpg" 
                     alt="Alexander The Great-Boyfriend of the Dead" width="720px">
                 </div>
-                <div class="flex-child art9">
+                <div class="flex-child art10">
                     <img class="img-responsive" src="../../assets/art/fanart/rand-webtoon.jpg" alt="Rand Hirahara-I Love Yoo" width="720px">
                 </div>
             </div>
