Add some code projects and resume projects

--- a/pages/1work/code.html
+++ b/pages/1work/code.html
@@ -60,6 +60,29 @@
                     </p>
                 </div>
             </div>
+            <div class="codepen">
+                <div class="imagegrid">
+                    <iframe src="https://codepen.io/vilinh27/full/zYKpymo" width="80%" height="300px" frameBorder="0"
+                        style="border: 0;"></iframe><br>Brought to you by <a href="" target="_blank"></a>
+                    <h2>Responsive image grid</h2>
+                    <p>One of my codepen experiments that can be found <a href="https://codepen.io/vilinh27/pen/zYKpymo">here</a>.</p>
+                </div>
+
+                <div class="parallax">
+                    <iframe src="https://codepen.io/vilinh27/full/zYwxvRx" width="80%" height="300px" frameBorder="0"
+                        style="border: 0;"></iframe><br>Brought to you by <a href="" target="_blank"></a>
+                        <h2>Parallax text</h2>
+                        <p>A codepen experiment on how to make parallaxing text that can be found <a href="https://codepen.io/vilinh27/full/zYwxvRx">here</a>.</p>
+                </div>
+
+                <div class="flags">
+                    <iframe src="https://codepen.io/vilinh27/full/wvdGXdQ" width="80%" height="300px" frameBorder="0"
+                        style="border: 0;"></iframe><br>Brought to you by <a href="" target="_blank"></a>
+                        <h2>Flags CSS Art</h2>
+                        <p>My chance to try out CSS art as another codepen experiment. More can be found <a href="https://codepen.io/vilinh27/full/wvdGXdQ">here</a>.</p>
+                </div>
+
+            </div>
         </div>
 
         <script src="../../styling/js-effects/modal.js"></script>
