--- a/pages/2about/about.html
+++ b/pages/2about/about.html
@@ -187,11 +187,58 @@
                 <!--projects-->
                 <div class="myProjects">
                     <h2>Projects</h2>
+                    <div class="timeline">
+                        <div class="container left">
+                            <div class="timelinecontent">
+                                <h2>Story Planner Website</h2>
+                                <h3>(Jun 2021 - Jul 2021)</h3>
+                                <p> Build website to organize different story elements to learn how to organize information on the web.</p>
+                            </div>
+                        </div>
+
+                        <div class="container right">
+                            <div class="timelinecontent">
+                                <h2>Church Website</h2>
+                                <h3>(December 2020 - Present)</h3>
+                                <p>Build website based on existing church website using design principles and markup languages to learn how more web interactivity.</p>
+                            </div>
+                        </div>
+
+                        <div class="container left">
+                            <div class="timelinecontent">
+                                <h2>HellGhost</h2>
+                                <h3>(Aug 2020 - Sep 2020)</h3>
+                                <p> Build endless runner game to learn about how c# mechanics work in Unity game engine.</p>
+                            </div>
+                        </div>
+
+                        <div class="container right">
+                            <div class="timelinecontent">
+                                <h2>Time to Talk</h2>
+                                <h3>(Jun 2020 - Sep 2020)</h3>
+                                <p>Build visual novel game to learn basics of game story building and introductory game engine mechanics.</p>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
 
                 <!--education-->
                 <div class="education">
                     <h2>Education</h2>
+                    <div class="Depaul">
+                        <h3>Depaul University</h3>
+                        <p>Expected, 2023</p>
+                        <p>M.S. Computer Science</p>
+                        <p>Cumulative GPA: 3.5</p>
+                    </div>
+                    <div class="Columbia">
+                        <h3>Columbia College Chicago</h3>
+                        <p>December 2018</p>
+                        <p>B.A. Cinema Arts and Sciences, Concentration in Animation</p>
+                        <p>Cumulative GPA: 3.89</p>
+                        <p>Trustee Award Recipient</p>
+                    </div>
                 </div>
 
             </div>
