add twine stuff to see if it works

--- a/pages/1work/games.html
+++ b/pages/1work/games.html
@@ -69,6 +69,18 @@
                 <p>About the game</p>
                 <p>Click <a href="https://linh-is-tibia.itch.io/cartridge-collector">here</a> to play the game</p>
             </div>
+
+            <div class="Dante">
+                <img class="img-responsive" src="../../assets/games/D-default.png" alt="dante" width="720px">
+                <h2>Meeting Dante Moon</h2>
+                <p>About the game...</p>
+                <p>Made in twine...</p>
+                <h3>Asset sounds</h3>
+                <h4>doorbell</h4>
+                <audio controls>
+                    <source src="../../assets/games/twinesounds01/yfs_la_paz_doorbell2_080.mp3"/>
+                </audio>
+            </div>
         </div>
 
         <script src="../../styling/js-effects/modal.js"></script>
