adding more twine sounds

--- a/pages/1work/games.html
+++ b/pages/1work/games.html
@@ -76,10 +76,28 @@
                 <p>About the game...</p>
                 <p>Made in twine...</p>
                 <h3>Asset sounds</h3>
+                <p>Click <a href="#">here</a> to play the game</p>
+
                 <h4>doorbell</h4>
                 <audio controls>
                     <source src="../../assets/games/twinesounds01/yfs_la_paz_doorbell2_080.mp3"/>
                 </audio>
+
+                <h4>Sigh</h4>
+                <audio controls>
+                    <source src="../../assets/games/twinesounds01/lukas_tvrdon_zisa_relief_moan_tired_exhale_2_106.mp3"/>
+                </audio>
+
+                <h4>dooor close</h4>
+                <audio controls>
+                    <source src="../../assets/games/twinesounds01/zapsplat_household_front_door_heavy_wood_close_ext_001_67891.mp3" />
+                </audio>
+
+                <h4>door open</h4>
+                <audio controls>
+                    <source src="../../assets/games/twinesounds01/zapsplat_household_front_door_open_internal.mp3" />
+                </audio>
+
             </div>
         </div>
 
