add buzzer sound

--- a/pages/1work/games.html
+++ b/pages/1work/games.html
@@ -98,6 +98,11 @@
                     <source src="../../assets/games/twinesounds01/zapsplat_household_front_door_open_internal.mp3" />
                 </audio>
 
+                <h4>buzzer</h4>
+                <audio controls>
+                    <source src="../../assets/games/twinesounds01/zapsplat_household_front_door_open_internal.mp3"/>
+                </audio>
+
             </div>
         </div>
 
