--- a/pages/1work/games.html
+++ b/pages/1work/games.html
@@ -76,7 +76,7 @@
                 <p>About the game...</p>
                 <p>Made in twine...</p>
                 <h3>Asset sounds</h3>
-                <p>Click <a href="#">here</a> to play the game</p>
+                <p>Click <a href="https://linh-is-tibia.itch.io/meeting-dante-moon">here</a> to play the game</p>
 
                 <h4>doorbell</h4>
                 <audio controls>
