--- a/pages/1work/games.html
+++ b/pages/1work/games.html
@@ -51,7 +51,10 @@
             <div class="time-to-talk">
                 <img class="img-responsive" src="../../assets/games/timeToTalk-itchioCoverArtboard-1.png" alt="time to talk" width="720px">
                 <h2>Time to Talk</h2>
-                <p>About the game...</p>
+                <p>This game was made in the RENPY game engine, which runs on the python programming language.
+                    I had not programmed games before this project so this visual novel game helped introduce some
+                    basic game programming concepts. The story and art are original works of mine.
+                </p>
                 <p>Click <a href="https://linh-is-tibia.itch.io/time-to-talk">here</a> to play the game.</p>
             </div>
 
@@ -59,7 +62,9 @@
             <div class="hellghost">
                 <img class="img-responsive" src="../../assets/games/ghost01.JPG" alt="hell ghost" width="720px">
                 <h2>Hell Ghost</h2>
-                <p>About the game...</p>
+                <p>This project was to help introduce game programming in unity. I used an endless runner tutorial
+                    from Blackthornprod on youtube to help teach me. The art is original work from me.
+                </p>
                 <p>Click <a href="https://linh-is-tibia.itch.io/hellghost">here</a> to play the game</p>
             </div>
 
