--- a/pages/1work/code.html
+++ b/pages/1work/code.html
@@ -50,6 +50,12 @@
         <!-- Page content -->
         <div class="content">
             <div class="sites">
+                <div class="artist-card">
+                    <iframe src="https://codepen.io/vilinh27/full/QWvJEop" style="border:0px #ffffff none;" name="myiFrame" scrolling="no"
+                        frameborder="0" marginheight="0px" marginwidth="0px" height="300px" width="80%" allowfullscreen></iframe>
+                    <h2>Carrd.co clone</h2>
+                    <p>This is my attempt at cloning the carrd.co service many artists use to link to their personal socials and such.</p>
+                    </div>
                 <div class="myStoryPlanner">
                     <iframe src="https://vilinh27.github.io/myStoryPlanner/" name="myStoryPlanner" scrolling="No" height="300px"
                         width="80%" style="border: none;"></iframe>
