--- a/pages/1work/code.html
+++ b/pages/1work/code.html
@@ -55,6 +55,7 @@
                         frameborder="0" marginheight="0px" marginwidth="0px" height="300px" width="80%" allowfullscreen></iframe>
                     <h2>Carrd.co clone</h2>
                     <p>This is my attempt at cloning the carrd.co service many artists use to link to their personal socials and such.</p>
+                    <p>Click <a href="https://codepen.io/vilinh27/pen/QWvJEop">here</a> to see the code.</p>
                     </div>
                 <div class="myStoryPlanner">
                     <iframe src="https://vilinh27.github.io/myStoryPlanner/" name="myStoryPlanner" scrolling="No" height="300px"
