--- a/pages/1work/games.html
+++ b/pages/1work/games.html
@@ -30,10 +30,13 @@
 
             <div id="socials">
                 <h2>Follow me!</h2>
-                <a href="https://www.instagram.com/linh_is_tibia/"><i class="fa fa-instagram" id="insta"></i></a>
-                <a href="https://twitter.com/vilinh27"><i class="fa fa-twitter" id="twitter"></i></a>
-                <a href="https://www.linkedin.com/in/vilinhnguyen27/"><i class="fa fa-linkedin" id="linkedin"></i></a>
-                <a href="#git"><i class="fa fa-github" id="github"></i></a>
+                <div id="socialsmenu">
+                    <a href="https://www.instagram.com/linh_is_tibia/"><i class="fa fa-instagram" id="insta"></i></a>
+                    <a href="https://twitter.com/vilinh27"><i class="fa fa-twitter" id="twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/vilinhnguyen27/"><i class="fa fa-linkedin" id="linkedin"></i></a>
+                    <a href="#git"><i class="fa fa-github" id="github"></i></a>
+                </div>
+                
             </div>
         </div>
 
