style some button stuff

--- a/pages/2about/about.html
+++ b/pages/2about/about.html
@@ -63,13 +63,15 @@
             <div class="flex-child description">
                 <h2>Hello/Salut!</h2>
                 <p>
-                    Vi-Linh is a computer science studying for her masters with a bachelors focused in animation. She is originally from Canada but has studied in the United States for a while now.</p>
+                    Vi-Linh is a computer science studying for her masters with a 
+                    bachelors focused in animation. She is originally from Canada but 
+                    has studied in the United States for a while now.
+                    In her free time she likes to draw, knit and sew trinkets.
+                </p>
             </div>
 
             <div class="flex-child cv">
-                <p>
-                    Button for download here
-                </p>
+                <button class="download-resume">Download</button>
 
                 <!--experience-->
                 <h2>Experience</h2>
