--- a/index.html
+++ b/index.html
@@ -3,57 +3,33 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="../../styling/styles.css">
     <!--links to bootstrap CDN:-->
     <link rel=”stylesheet” href=”https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css”rel=”nofollow”
       integrity=”sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm” crossorigin=”anonymous”>
+  
+    <!--link to bootstrap styling-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-    <div class="container-fluid">
-      <div class="navbar">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <span class="navbar-brand mb-0 h1">
-            Vi-Linh Nguyen
-          </span>
-
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <p class="nav-link">
-                  Home
-                </p>
-              </li>
-
-              <li class="nav-item">
-                <p class="nav-link">
-                  Projects
-                </p>
-              </li>
-
-              <li class="nav-item">
-                <p class="nav-link">
-                  About
-                </p>
-              </li>
-            </ul>
-
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-
-          </div>
-
-        </nav>
-
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Vi-Linh Nguyen</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
       </div>
+    </nav>
+
+    <div class="container">
       <div class="row">
         <div class="col">
           logo <br />
@@ -62,10 +38,10 @@
           project grid <br />
         </div>
       </div>
-      <div class ="footer">
-        footer
-      </div>
-     
+    </div><!--end of container-->
+
+    <div class="footer">
+      footer
     </div>
     
   </body>
